--- a/resume.html
+++ b/resume.html
@@ -28,6 +28,16 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-96845588-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
 </head>
 
@@ -87,7 +97,7 @@
                     I have also been Technical Intern in CultureAlley(Hello English), a leading Android App Developer in India and as a Software Engineering Intern in Toppr.
                     Currently, I am a Research Intern(NLP) in Delhi Technological University, New Delhi.
                     </div>
-        <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="AYUSH_Resume.pdf" class="btn btn-lg btn-outline">
                         <i class="fa fa-download"></i> Download Resume
                     </a>
