--- a/resume.html
+++ b/resume.html
@@ -98,7 +98,7 @@
                     Currently, I am a Research Intern(NLP) in Delhi Technological University, New Delhi.
                     </div>
                     <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="AYUSH_Resume.pdf" class="btn btn-lg btn-outline">
+                    <a href="AYUSH_Resume_2017-12-12.pdf" class="btn btn-lg btn-outline">
                         <i class="fa fa-download"></i> Download Resume
                     </a>
                 </div>
