relative link for img

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<div class='loader' >
 
 				<div class='img' >
-					<img src='img/loader.gif' alt>
+					<img src='./img/loader.gif' alt>
 				</div>
 				<span>Loading...</span>
 
@@ -115,7 +115,7 @@
 
 						<!--your image-->
 						<div class='person-img' >
-							<img src='img/person.png' alt>
+							<img src='./img/person.png' alt>
 						</div>
 
 					</div>
