--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 		<!--page-title-->
 		<title>Ayush Jain - Software Developer</title>
-		<link rel = "icon" href =  "./img/person_icon.png" type = "image/x-icon"> 
+		<link rel = "icon" href =  "./img/person_icon.ico" type = "image/x-icon"> 
 
 		<!--[if lt IE 9]>
 		  <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
