open in new tab for social links added

--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
 
                                     <!--social-icons-->
                                    <p>
-                                   <a href='https://github.com/iamayushjain' class='ion-social-github custom-icon' ></a>
-                                   <a href='https://linkedin.com/in/ayushjain2911/' class='ion-social-linkedin custom-icon' ></a>
-                                   <a href='https://www.instagram.com/iamayushjain/' class='ion-social-instagram custom-icon' ></a>
-                                   <a href='https://twitter.com/ayushjain2911/' class='ion-social-twitter custom-icon' ></a>
+                                   <a href='https://github.com/iamayushjain' class='ion-social-github custom-icon' target='_blank'></a>
+                                   <a href='https://linkedin.com/in/ayushjain2911/' class='ion-social-linkedin custom-icon' target='_blank'></a>
+                                   <a href='https://www.instagram.com/iamayushjain/' class='ion-social-instagram custom-icon' target='_blank'></a>
+                                   <a href='https://twitter.com/ayushjain2911/' class='ion-social-twitter custom-icon' target='_blank' ></a>
                                    </p>
 
 									<!--intro-buttons-->
