--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 										<span>Senior Software Engineer</span>
 									</li>
 									<li>
-										<strong>Edcuation:</strong>
+										<strong>Education:</strong>
 										<span>Galgotias College of Engineering And Technology</span>
 									</li>
 									<li>
