--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 						</li>
 
 						<li>
-							<a href='./files/ayush_latex_resume.pdf' data-section='resume' target="_blank" >
+							<a href='./files/ayush_jain_resume.pdf' data-section='resume' target="_blank" >
 								<i class='ion-ios-paper-outline' ></i>
 								<span>Resume</span>
 							</a>
@@ -148,7 +148,7 @@
 
 									<!--intro-buttons-->
 									<div class='intro-btns' >
-										<a href='./files/ayush_latex_resume.pdf' class='btn-material section-toggle' target='_blank'>
+										<a href='./files/ayush_jain_resume.pdf' class='btn-material section-toggle' target='_blank'>
 											Download Resume
 										</a>
 									</div>
@@ -190,6 +190,10 @@
 									<li>
 										<strong>Education:</strong>
 										<span>Galgotias College of Engineering And Technology</span>
+									</li>
+									<li>
+										<strong>Degree:</strong>
+										<span>B. Tech(Hons.), Information Technology</span>
 									</li>
 									<li>
 										<strong>Degree:</strong>
