--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 									<h2>Hi, I'm Ayush Jain</h2>
 
 									<!--your-summarized explanation-->
-									<span>Senior Software Engineer at CultureAlley(Hello English)</span>
+									<span>Senior Software Engineer at CultureAlley (Hello English) | Ex-Toppr</span>
 
 									<!--your-information-->
 									<p>
@@ -190,10 +190,6 @@
 									<li>
 										<strong>Education:</strong>
 										<span>Galgotias College of Engineering And Technology</span>
-									</li>
-									<li>
-										<strong>Degree:</strong>
-										<span>B. Tech(Hons.), Information Technology</span>
 									</li>
 									<li>
 										<strong>Degree:</strong>
