light house audit optimization

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class='no-js' >
+<html class='no-js' lang='en'>
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -76,19 +76,19 @@
 				<nav class='menu-items' >
 					<ul>
 						<li>
-							<a href='#' data-section='home' >
+							<a href='#home' data-section='home' >
 								<i class='ion-ios-home-outline' ></i>
 								<span>Home</span>
 							</a>
 						</li>
 						<li>
-							<a href='#' data-section='about' >
+							<a href='#about' data-section='about' >
 								<i class='ion-ios-person-outline' ></i>
 								<span>About</span>
 							</a>
 						</li>
 						<li>
-							<a href='#' data-section='experience' >
+							<a href='#experience' data-section='experience' >
 								<i class='ion-ios-briefcase-outline' ></i>
 								<span>Experience</span>
 							</a>
@@ -115,7 +115,7 @@
 
 						<!--your image-->
 						<div class='person-img' >
-							<img src='./img/person.png' alt>
+							<img id = 'profile-pic' alt>
 						</div>
 
 					</div>
@@ -129,7 +129,7 @@
 									<h2>Hi, I'm Ayush Jain</h2>
 
 									<!--your-summarized explanation-->
-									<span>Senior Software Engineer at CultureAlley (Hello English) | Ex-Toppr</span>
+									<span>Sr. Software Engineer at CultureAlley (Hello English) | Ex-Toppr</span>
 
 									<!--your-information-->
 									<p>
@@ -140,16 +140,19 @@
 
                                     <!--social-icons-->
                                    <p>
-                                   <a href='https://github.com/iamayushjain' class='ion-social-github custom-icon' target='_blank'></a>
-                                   <a href='https://linkedin.com/in/ayushjain2911/' class='ion-social-linkedin custom-icon' target='_blank'></a>
-                                   <a href='https://www.instagram.com/iamayushjain/' class='ion-social-instagram custom-icon' target='_blank'></a>
-                                   <a href='https://twitter.com/ayushjain2911/' class='ion-social-twitter custom-icon' target='_blank' ></a>
+                                   <a href='https://github.com/iamayushjain' class='ion-social-github custom-icon' target='_blank' rel="noreferrer"></a>
+                                   <a href='https://linkedin.com/in/ayushjain2911/' class='ion-social-linkedin custom-icon' target='_blank' rel="noreferrer"></a>
+                                   <a href='https://www.instagram.com/iamayushjain/' class='ion-social-instagram custom-icon' target='_blank' rel="noreferrer"></a>
+                                   <a href='https://twitter.com/ayushjain2911/' class='ion-social-twitter custom-icon' target='_blank' rel="noreferrer"></a>
                                    </p>
 
 									<!--intro-buttons-->
 									<div class='intro-btns' >
 										<a href='./files/ayush_jain_resume.pdf' class='btn-material section-toggle' target='_blank'>
 											Download Resume
+										</a>
+										<a href='#about' data-section='about' class='btn-material intro-btn-secondary btn-secondary' >
+											About me
 										</a>
 									</div>
 
