--- a/external/resume.html
+++ b/external/resume.html
@@ -9,6 +9,6 @@
 		
 	</head>
 	<body style="margin: 0px;width: 100%;height: 100%;">
-		<iframe src="../files/ayush_jain_resume.pdf" style="width: 100%;height: 100%;border: none;" frameborder="0"></iframe> 
+		<iframe src="./../files/ayush_jain_resume.pdf" style="width: 100%;height: 100%;border: none;" frameborder="0"></iframe> 
 	</body>
 </html>
