--- a/external/resume.html
+++ b/external/resume.html
@@ -3,12 +3,12 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta property='og:title' content='Curriculum vitae'>
 		<meta property='og:image' content='./../img/resume_metadata.jpg'/>
 		<meta name="description" content="#coder #developer #system_designer #change_maker #geek" />
 		<meta name="keywords" content="coder,developer,system_designer,change_maker,geek" />
-		
 	</head>
 	<body style="margin: 0px;width: 100%;height: 100%;">
-		<iframe src="./../files/ayush_jain_resume.pdf" style="width: 100%;height: 100%;border: none;" frameborder="0"></iframe> 
+		<iframe src="./../files/ayush_jain_resume.pdf#zoom=110" style="width: 100%;height: 100%;border: none;" frameborder="0"></iframe> 
 	</body>
 </html>
