edit social connections & images

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="#coder #developer #system_designer #change_maker #geek" />
-		<meta name="keywords" content="coder,developer,system_designer,change_maker,geek" />
+		<meta name="keywords" content="coder,developer,system_designer,change_maker,geek,java_developer" />
 
 		<!--page-title-->
 		<title>Ayush Jain - Software Developer</title>
@@ -135,15 +135,16 @@
 									<p>
 										Welcome to my space in the Internet world!
 										<br>
-										//todo insert tautology about myself
+										I love making new professional acquaintances. Reach out via <a href='mailto: ayushjain2911@gmail.com' target='_blank' rel="noreferrer" title='Email' style = 'color:#16a085;'>Email</a> or Call, if you want to talk technology, product strategy or science fiction.
 									</p>
 
                                     <!--social-icons-->
                                    <p>
-                                   <a href='https://github.com/iamayushjain' class='ion-social-github custom-icon' target='_blank' rel="noreferrer"></a>
-                                   <a href='https://linkedin.com/in/ayushjain2911/' class='ion-social-linkedin custom-icon' target='_blank' rel="noreferrer"></a>
-                                   <a href='https://www.instagram.com/iamayushjain/' class='ion-social-instagram custom-icon' target='_blank' rel="noreferrer"></a>
-                                   <a href='https://twitter.com/ayushjain2911/' class='ion-social-twitter custom-icon' target='_blank' rel="noreferrer"></a>
+                                   <a href='https://github.com/iamayushjain' class='ion-social-github custom-icon' target='_blank' rel="noreferrer" title='Github'></a>
+                                   <a href='https://linkedin.com/in/ayushjain2911/' class='ion-social-linkedin custom-icon' target='_blank' rel="noreferrer" title='Linkedin'></a>
+                                   <a href='https://www.instagram.com/iamayushjain/' class='ion-social-instagram custom-icon' target='_blank' rel="noreferrer" title='Instagram'></a>
+                                   <a href='https://twitter.com/ayushjain2911/' class='ion-social-twitter custom-icon' target='_blank' rel="noreferrer" title='Twitter'></a>
+                                   <a href='mailto: ayushjain2911@gmail.com' class='ion-android-mail custom-icon' target='_blank' rel="noreferrer" title='Email'></a>
                                    </p>
 
 									<!--intro-buttons-->
