--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 									<h2>Hi, I'm Ayush Jain</h2>
 
 									<!--your-summarized explanation-->
-									<span>Sr. Software Engineer at Reliance Ajio | Ex-Hello English</span>
+									<span>Software Developer Engineer at Amazon | Ex-Hello English</span>
 
 									<!--your-information-->
 									<p>
