--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 									</li>
 									<li>
 										<strong>Job:</strong>
-										<span>Senior Software Engineer</span>
+										<span>SDE @Amazon</span>
 									</li>
 									<li>
 										<strong>Education:</strong>
@@ -207,13 +207,12 @@
 								<!--about-text-->
 								<div class='about-text' >
 									<p>
-										I am currently designing scalable systems for CultureAlley(Hello English). I enjoy exploring & learning to optimize the mechanism to get any task done.
+										I am currently designing scalable systems for Amazon. I enjoy exploring & learning to optimize the mechanism to get any task done.
 									</p>
 									<p>
 										I am involved in various other community chapters like Google Developer Group (GDG) across cities. I also enjoy sharing my learning with enthusiastic learner across the community. And have participated and endorse Hackathons across the communities.
 									</p>
 									<p>
-
 										During my spare time, I love watching science fiction such as Doctor Who, Back to the Future, Star Wars, Star trek, and the list goes on.
 									</p>
 									<p>
